--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,11 +1,11 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
-  uri         : "http://name.com"
-  email       : "name@name.com"
+  name        : "Chen Zhong"
+  uri         : "http://www.czhong.page/"
+  email       : "czhong@ut.edu"
   bio         : "This is the first name."
-  avatar      : "bio-photo-2.jpg"
+  avatar      : "bio-photo-3.jpg"
   twitter     : "name"
   google_plus : "Name"
 
