--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=PFHwwloAAAAJ&hl=en"
-  email            :
+  email            : "czhong at ut dot edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
