update main page

--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Chen Zhong"
   avatar           : "profile.png"
   bio              : "Assistant Professor of Cybersecurity"
-  location         : "The University of Tampa, 401 W Kennedy Blvd, Tampa"
+  location         : "401 W Kennedy Blvd, Tampa"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=PFHwwloAAAAJ&hl=en"
